# NYCU-Reinforcement-Learning

./: .gitignore  README.md
HW1/src/: Makefile  pyproject.toml  reinforce.py  reinforce_baseline.py  reinforce_gae.py
HW1/src/preTrained/: CartPole_0.001.pth  LunarLander_0.0003.pth  LunarLander_GAE_0.0005.pth
HW1/src/tb_record_1/: events.out.tfevents.1775106712.dunkun-cyborg15a12ve.801182.0  events.out.tfevents.1775106766.dunkun-cyborg15a12ve.801647.0  events.out.tfevents.1775106899.dunkun-cyborg15a12ve.802806.0  events.out.tfevents.1775107051.dunkun-cyborg15a12ve.803856.0  events.out.tfevents.1775107896.dunkun-cyborg15a12ve.863808.0  events.out.tfevents.1775108212.dunkun-cyborg15a12ve.869949.0  events.out.tfevents.1775108376.dunkun-cyborg15a12ve.879471.0  events.out.tfevents.1775108540.dunkun-cyborg15a12ve.881341.0  events.out.tfevents.1775108665.dunkun-cyborg15a12ve.882295.0  events.out.tfevents.1775110221.dunkun-cyborg15a12ve.896265.0  events.out.tfevents.1775110360.dunkun-cyborg15a12ve.897241.0  events.out.tfevents.1775110383.dunkun-cyborg15a12ve.897506.0  events.out.tfevents.1775110603.dunkun-cyborg15a12ve.899025.0  events.out.tfevents.1775110622.dunkun-cyborg15a12ve.899204.0  events.out.tfevents.1775110703.dunkun-cyborg15a12ve.900595.0  events.out.tfevents.1775110924.dunkun-cyborg15a12ve.904371.0  events.out.tfevents.1775111414.dunkun-cyborg15a12ve.911428.0
HW2/src/: Makefile  ddpg.py  ddpg_cdq_cheetah.py  ddpg_cheetah.py  pyproject.toml
HW3/src/: Makefile  pyproject.toml  sac_panda_door_starter.py  sac_starter.py
HW3/src/wandb/: latest-run
(+125 files in other folders)
