[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RL homework1"
version = "0.1.0"
description = "RL homework1"
readme = "README.md"
authors = ["Wei Yu-Shyang <dunkun130897441@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
gymnasium = {extras = ["box2d"], version = "^1.0.0"}
numpy = "^1.24.0"
torch = "^2.0.0"
tensorboard = "^2.0.0"
pygame = "^2.0.0"
setuptools = "^65.0.0"